# firetrack

./: .editorconfig  .env.example  .eslintrc  .gitignore  README.md  compose.prod.yaml  compose.yaml  eslint.config.js  manage.py  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  react-router.config.js  readme.md  tsconfig.json  vite.config.js
app/: root.tsx  routes.ts
apps/api/: .env.example  .gitignore  Dockerfile  dockerfile  openapi.yaml  pyproject.toml  pytest.ini  readme.md
apps/api-django/: manage.py  pyproject.toml
apps/api-django/firetrack/: urls.py
apps/api-django/src/firetrack/: settings.py  urls.py  views.py
apps/api/src/firetrack/: api.py  asgi.py  config.py  database.py  main.py  middleware.py  settings.py  test.py  urls.py  views.py  wsgi.py
apps/api/src/firetrack/account/: apps.py  urls.py  views.py
apps/api/src/firetrack/acct/: apps.py  urls.py  views.py
apps/api/src/firetrack/candidatos/: admin.py  apps.py  models.py  services.py
apps/api/src/firetrack/candidatos/migrations/: 0001_initial.py  0002_remove_candidato_unique_candidato_id_fenomeno_and_more.py  0003_rename_valido_candidato_valid.py  0004_candidato_path_candidato_path_row_candidato_row.py
apps/api/src/firetrack/conta/: apps.py  forms.py  schemas.py  serializers.py  services.py  urls.py  utils.py  views.py
apps/api/src/firetrack/core/: apps.py  exceptions.py  urls.py  views.py
apps/api/src/firetrack/database/: core.py  dependencies.py  model.py  models.py
apps/api/src/firetrack/enums/: processing_events.py  processing_states.py
apps/api/src/firetrack/fenomeno/: apps.py  enums.py  models.py  serializers.py  services.py  state.py  urls.py  views.py
apps/api/src/firetrack/pares/: apps.py  models.py  services.py
apps/api/src/firetrack/produtos/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/api/src/firetrack/queimadas/: clients.py  enums.py  models.py  schemas.py  services.py  stac.py  views.py
apps/api/src/firetrack/services/: stac_service.py
apps/api/src/firetrack/stac/: apps.py  sample_item.json  serializers.py  services.py
apps/api/src/firetrack/state/: reserved_enums.py  state_backend.py  state_backend_redis.py  state_machine.py  state_manager.py
apps/api/tests/services/: test_stac_service.py
devops/: vm.md
(+219 files in other folders)
