[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firetrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
