[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firetrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "psycopg>=3.2.5",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
