[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firetrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.7",
    "pydantic>=2.10.6",
    "python-decouple>=3.8",
    "transitions>=0.9.2",
]

[dependency-groups]
dev = [
    "django-stubs>=5.1.3",
    "pyinstrument>=5.0.1",
    "ruff>=0.9.9",
]
